# dotfiles

./: .bashrc  .data.yml.sample  .gitattributes  .gitignore  .gitmodules  .graphicalrc  .vimrc  Pipfile  README.md  XCompose  Xresources  alacritty.toml.jinja  alacritty.yml  alacritty.yml.jinja  alacritty.yml.mustache  alsoftrc  atom-keymap.cson  awesomerc.lua  backup_list  bash_profile  bashrc  battery-monitor.service  battery-monitor.sh  calc.py  calculator  calendar-notifier.service  colorcycle.py  colors.py  colors.toml  compton.conf  default.pa  dunstrc  electron-flags.conf  electron15-flags.conf  environment.conf  feh-themes  festivalrc  ffmpeg-commands.txt  fonts.conf  fruitron-music-scheduler  (+106 more)
applications/: com.obsproject.Studio.desktop  fl-studio.desktop  gambatte.desktop  hyperterm.desktop  messenger.desktop  minecraft.desktop  mpv-gif.desktop  steam-system.desktop  tiny-terminal.desktop  web-browser.desktop
claude/: CLAUDE.md  babysit-stack.md  code-comments.md  handle-pr-feedback.md  jj-workflow.md  jj_workflow.md  pr-descriptions.md  settings.json  writing-as-claude.md
fonts/: generate-interkalgy.bash
fruitron/: fruitron-music-scheduler  fruitron-music-scheduler.service  fruitron-music-scheduler.timer
ghostty/: config.jinja  cursor-tail.glsl  cursor-trail.glsl  glow.glsl  kalgykai-dark  kalgykai-dark.jinja  kalgykai-light  kalgykai-light.jinja
helix/: config.toml  config.toml.jinja  kalgykai-dark.toml  kalgykai-dark.toml.jinja  kalgykai-light.toml  kalgykai-light.toml.jinja  languages.toml
installer/: actions.py  environment.py  logging.py  (+1 more)
(+119 files in other folders)
